# book-club-analysis

./: .gitignore  README.md  extractor.py  main.py  pyproject.toml  scraper.py  settings.py
