[project]
name = "book-club-analysis"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "lxml[html-clean]>=6.0.0",
    "requests-html>=0.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.7",
]

[tool.ruff.lint]
select = ["ALL"] 
ignore = ["COM812"]

[tool.ruff.lint.pydocstyle]
convention = "google"
